<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/SubjName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subjName"
            android:maxLength="50" />

        <TextView
            android:id="@+id/textError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attentionSubj"
            android:textColor="@color/design_default_color_error" />

        <EditText
            android:id="@+id/SubjPed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/subjPed"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/subjRoom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/subjRoom"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/mainButton"
                android:onClick="save"
                android:text="@string/saveTask"
                android:textColor="@color/design_default_color_background" />

            <Button
                android:id="@+id/buttonDel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/ic_launcher_background"
                android:onClick="delete"
                android:text="@string/deleteTask"
                android:textColor="@color/mainButton" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>